kubetest/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL # enables HTTPS on this port
      serverCertificate: /etc/certs/root-cert.pem
      privateKey: /etc/certs/key.pem
      caCertificates: /etc/certs/cert-chain.pem
    hosts:
    - "*"
