kubetest/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-dr
spec:
  host: release-name-auth.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
